--- a/.github/workflows/chintu.yml
+++ b/.github/workflows/chintu.yml
@@ -19,14 +19,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8'  # Specify your Python version here
+          python-version: '3.8'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Assuming you have a requirements.txt file
+          pip install -r requirements.txt
 
       - name: Run tests
         run: |
-          # Replace `pytest` with your testing command if different
-          pytest
+          pytest --maxfail=1 --timeout=30  # Limits to 1 failed test and sets a timeout
